# interview_garmin_test-module-simulator

./: README.md
CSharp/: TestModuleSimulator.sln
CSharp/TestModuleSimulator/: Program.cs  TestModuleSimulator.csproj
CSharp/TestModuleSimulator.UnitTests/: RecentResultCheckerTests.cs  TestModuleSimulator.UnitTests.csproj
CSharp/TestModuleSimulator/Checkers/: Checker.cs  RecentResultChecker.cs
CSharp/TestModuleSimulator/TestModules/: AutoTestModule.cs  ManualTestModule.cs  TestModule.cs
CSharp/TestModuleSimulator/Writers/: ExcelWriter.cs  Writer.cs
Python/: main.py  pyproject.toml
Python/checker/: __init__.py  abstract_checker.py  periodic_result_checker.py  recent_result_checker.py  test_recent_result_checker.py
Python/test_modules/: __init__.py  abstract_test_module.py  auto_test_module.py  manual_test_module.py
Python/writer/: excel_writer.py
Python_simple/: main.py  pyproject.toml
