[tool.poetry]
name = "python-simple"
version = "0.1.0"
description = ""
authors = ["Andy Lee <60734042+ukewea@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_simple"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
